syntax = "proto3";

option go_package = "./pb";

package pb;

message VerifyTokenReq {
  string token = 1;
  string platform = 2;
  string sendID = 3;
}
message VerifyTokenResp {
  string uid = 1;
  bool success = 2;
  string errMsg = 3;
}

service authService {
  rpc VerifyToken(VerifyTokenReq) returns (VerifyTokenResp) {}
}
